[FIX] sap.m.RadioButton: Selection now visible in print
- When the page is printed, the radio buttons selections
were not visible, since they are bacground colors only.
A border is now added when the page is about to be printed
so that the selections are visible.

BCP: 0020751295 0000324238 2018

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize_hcb/RadioButton.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize_hcb/RadioButton.less
@@ -65,3 +65,31 @@
 		margin: 0.125rem;
 	}
 }
+
+/* When printing border is needed for the selection */
+@media only print {
+	.sapMRbB .sapMRbBOut {
+		border-color: @sapUiHcStandardBackground;
+		border-style: solid;
+	}
+
+	.sapMRbErr .sapMRbBOut {
+		border-color: @sapUiFieldInvalidBackground;
+		border-style: dashed;
+	}
+
+	.sapMRbWarn .sapMRbBOut {
+		border-color: @sapUiHcStandardBackground;
+		border-style: dashed;
+	}
+
+	/* Selected */
+	.sapMRbSel .sapMRbBInn {
+		border-color: @sapUiHcStandardBackground;
+	}
+
+	/* Disabled */
+	.sapMRbDis.sapMRbSel .sapMRbBInn {
+		border-color: @sapUiHcReducedForeground;
+	}
+}
